--- a/packages/chrome-extension/src/manifest.json
+++ b/packages/chrome-extension/src/manifest.json
@@ -3,6 +3,10 @@
   "version": "0.0",
   "description": "Krix store watcher",
   "manifest_version": 2,
+  "background": {
+    "scripts": [ "background.bundle.js" ],
+    "persistent": false
+  },
   "devtools_page": "devtools.html",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
