--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "gulp:tasks": "gulp --gulpfile=./gulp.dev.js --tasks",
-    "gulp:watch": "gulp --gulpfile=./gulp.dev.js build:watch",
-    "gulp:test": "gulp --gulpfile=./gulp.dev.js test:watch",
-    "gulp:clean:dist": "gulp --gulpfile=./gulp.dev.js clean:dist",
-    "gulp:clean:test": "gulp --gulpfile=./gulp.dev.js clean:test",
-    "prod:build": "gulp --gulpfile=./gulp.dev.js build:prod",
-    "dev:watch": "npm run gulp:watch",
-    "dev:test": "npm run gulp:test"
+    "dev:tasks": "gulp --gulpfile=./gulp.dev.js --tasks",
+    "dev:watch": "gulp --gulpfile=./gulp.dev.js build:watch",
+    "dev:test": "gulp --gulpfile=./gulp.dev.js test:watch",
+    "dev:clear:dist": "gulp --gulpfile=./gulp.dev.js clear:dist",
+    "dev:clear:test": "gulp --gulpfile=./gulp.dev.js clear:test",
+    "pkg:tasks": "gulp --gulpfile=./gulp.pkg.js --tasks",
+    "pkg:build": "gulp --gulpfile=./gulp.pkg.js build"
   },
   "keywords": [
     "krix",
