build(pkg): enable `declaration` logic in `TS Config` logic

--- a/packages/chrome-extension/tsconfig.prod.json
+++ b/packages/chrome-extension/tsconfig.prod.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "esnext",
-    "declaration": false,
+    "declaration": true,
     "outDir": "./dist",
     "baseUrl": "src",
     "sourceMap": true,
