--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -34,7 +34,10 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.149",
     "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "codelyzer": "^5.0.0",
+    "eslint": "^6.8.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
