--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "dev:start": "ng serve",
+    "dev:watch": "ng serve",
     "prod:build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,7 +22,8 @@
     "lodash": "^4.17.15",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@krix-devtool/core": "0.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.21",
