--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "dev:watch": "ng serve",
-    "prod:build": "ng build",
+    "prod:build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
