--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "tsconfig.json",
+    "project": [ "./tsconfig.json" ],
     "tsconfigRootDir": ".",
     "createDefaultProgram": "true"
   },
@@ -20,6 +20,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-empty-interface": "off",
@@ -38,7 +39,7 @@
     "@typescript-eslint/no-use-before-define": "warn",
     "@typescript-eslint/strict-boolean-expressions": "warn",
     "indent": "off",
-    "@typescript-eslint/indent": [ "warn", 2 ],
+    "@typescript-eslint/indent": [ "off" ],
     "@typescript-eslint/class-name-casing": "warn",
     "@typescript-eslint/interface-name-prefix": [ "warn", {
       "prefixWithI": "never"
