--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "krix-devtool",
   "main": "background.js",
   "scripts": {
+    "postinstall": "npm run lerna:bootstrap",
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:clean": "lerna clean --yes",
+    "lerna:publish": "lerna version && npm run pkg:build && lerna publish from-package --yes --contents dist",
     "gulp:tasks": "gulp --tasks",
-    "prod:build": "lerna run --parallel pkg:build && lerna run --parallel prod:build && gulp build",
-    "dev:watch": "lerna run --parallel dev:watch"
+    "dev:build": "gulp dev:linfra:build",
+    "dev:watch": "npm run dev:build && lerna run --parallel dev:watch",
+    "ext:build": "gulp ext:linfra:build && gulp ext:bundle"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,9 @@
   },
   "homepage": "https://github.com/Geass1000/krix-devtool#readme",
   "devDependencies": {
+    "@linfra/arbiter": "^2.1.1-alpha.0",
+    "@linfra/core": "^2.0.5-alpha.0",
+    "@types/node": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "eslint": "^6.8.0",
