--- a/packages/devtool-app/angular.json
+++ b/packages/devtool-app/angular.json
@@ -22,7 +22,6 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -54,11 +53,6 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
                 }
               ]
             }
@@ -124,6 +118,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "devtool"
+    }
+  },
+  "defaultProject": "devtool",
+  "cli": {
+    "analytics": false
+  }
 }
