--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -21,19 +21,19 @@
   "author": "Andrey Shuleiko",
   "license": "ISC",
   "dependencies": {
+    "@krix-devtool/core": "0.0.0",
     "lodash": "^4.17.15",
-    "rxjs": "^6.5.5",
-    "@krix-devtool/core": "0.0.0"
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/chrome": "0.0.104",
     "@types/lodash": "^4.14.149",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
     "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "@types/chrome": "0.0.104",
     "chai": "^4.2.0",
     "concurrently": "^5.1.0",
     "del": "^5.1.0",
