--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@krix-devtool/core": "0.0.0",
+    "@krix/state-store": "^1.0.2-alpha.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.1",
-    "zone.js": "~0.10.3",
-    "@krix-devtool/core": "0.0.0"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
