--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@krix-devtool/core": "0.0.0",
     "@krix/state-store": "^1.0.2-alpha.0",
     "lodash": "^4.17.15",
