--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -2,58 +2,55 @@
   "name": "@krix-devtool/app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "dev:watch": "ng serve",
-    "ext:build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "dev:start": "./node_modules/.bin/ng serve",
+    "ext:build": "./node_modules/.bin/ng build --prod",
+    "test": "./node_modules/.bin/ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.1",
-    "@angular/common": "~9.1.1",
-    "@angular/compiler": "~9.1.1",
-    "@angular/core": "~9.1.1",
-    "@angular/forms": "~9.1.1",
-    "@angular/platform-browser": "~9.1.1",
-    "@angular/platform-browser-dynamic": "~9.1.1",
-    "@angular/router": "~9.1.1",
+    "@angular/animations": "~9.1.6",
+    "@angular/common": "~9.1.6",
+    "@angular/compiler": "~9.1.6",
+    "@angular/core": "~9.1.6",
+    "@angular/forms": "~9.1.6",
+    "@angular/platform-browser": "~9.1.6",
+    "@angular/platform-browser-dynamic": "~9.1.6",
+    "@angular/router": "~9.1.6",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@krix-devtool/core": "0.0.0",
-    "@krix/state-store": "^1.0.2-alpha.0",
+    "@krix/state-store": "^5.0.0-alpha.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.5.5",
-    "tslib": "^1.11.1",
+    "tslib": "^1.11.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "~9.1.1",
-    "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.1",
-    "@types/chrome": "0.0.104",
+    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular/cli": "~9.1.5",
+    "@angular/compiler-cli": "~9.1.6",
+    "@angular/language-service": "~9.1.6",
+    "@types/chrome": "0.0.107",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "~13.11.1",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@types/lodash": "^4.14.150",
+    "@types/node": "~13.13.5",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "codelyzer": "^5.2.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.1",
-    "karma": "~5.0.1",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.0.5",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.8.2",
-    "tslint": "~6.1.1",
+    "protractor": "~5.4.4",
+    "ts-node": "~8.10.1",
+    "tslint": "~6.1.2",
     "typescript": "~3.8.3"
   }
 }
