--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@krix-devtool/app",
+  "name": "@krix-devtool/devtool-app",
   "version": "0.0.0",
   "scripts": {
     "dev:start": "./node_modules/.bin/ng serve",
@@ -8,14 +8,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.6",
-    "@angular/common": "~9.1.6",
-    "@angular/compiler": "~9.1.6",
-    "@angular/core": "~9.1.6",
-    "@angular/forms": "~9.1.6",
-    "@angular/platform-browser": "~9.1.6",
-    "@angular/platform-browser-dynamic": "~9.1.6",
-    "@angular/router": "~9.1.6",
+    "@angular/animations": "~9.1.7",
+    "@angular/common": "~9.1.7",
+    "@angular/compiler": "~9.1.7",
+    "@angular/core": "~9.1.7",
+    "@angular/forms": "~9.1.7",
+    "@angular/platform-browser": "~9.1.7",
+    "@angular/platform-browser-dynamic": "~9.1.7",
+    "@angular/router": "~9.1.7",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -24,33 +24,33 @@
     "@krix/state-store": "^5.0.0-alpha.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.5.5",
-    "tslib": "^1.11.2",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
-    "@angular/cli": "~9.1.5",
-    "@angular/compiler-cli": "~9.1.6",
-    "@angular/language-service": "~9.1.6",
-    "@types/chrome": "0.0.107",
+    "@angular-devkit/build-angular": "~0.901.6",
+    "@angular/cli": "~9.1.6",
+    "@angular/compiler-cli": "~9.1.7",
+    "@angular/language-service": "~9.1.7",
+    "@types/chrome": "0.0.112",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
-    "@types/lodash": "^4.14.150",
-    "@types/node": "~13.13.5",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
+    "@types/lodash": "^4.14.151",
+    "@types/node": "~14.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "codelyzer": "^5.2.2",
     "eslint": "^7.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~5.0.5",
+    "karma": "~5.0.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.4",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "~7.0.0",
     "ts-node": "~8.10.1",
     "tslint": "~6.1.2",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.2"
   }
 }
