--- a/packages/plugin/tsconfig.prod.json
+++ b/packages/plugin/tsconfig.prod.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "esnext",
     "declaration": true,
     "outDir": "./dist",
     "baseUrl": "src",
