--- a/packages/example-app/package.json
+++ b/packages/example-app/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@krix/state-store": "^5.0.2-alpha.0",
+    "@krix/devtool-plugin": "^0.0.0-alpha.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
