chore(pkg): update `Krix SS` package version and fix ESLint issues

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -59,7 +59,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "@krix/state-store": "^5.0.2-alpha.0",
+    "@krix/state-store": "^6.0.0",
     "@krix-devtool/core": "0.0.0",
     "lodash": "^4.17.15",
     "rxjs": "^6.5.5"
