--- a/packages/devtool-app/package.json
+++ b/packages/devtool-app/package.json
@@ -21,7 +21,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@krix-devtool/core": "0.0.0",
-    "@krix/state-store": "^5.0.2-alpha.0",
+    "@krix/state-store": "^6.0.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
