--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -11,13 +11,12 @@
     "access": "public"
   },
   "scripts": {
-    "gulp:clear:dist": "gulp --gulpfile=./common.gulp.js clear:dist",
-    "gulp:clear:test": "gulp --gulpfile=./common.gulp.js clear:test",
-    "webpack:build": "webpack --config webpack.prod.js --progress --colors",
-    "dev:build": "gulp --gulpfile=./build.gulp.js build",
-    "dev:watch": "gulp --gulpfile=./watch-pkg.gulp.js watch",
-    "dev:test": "gulp --gulpfile=./watch-pkg.gulp.js test:watch",
-    "pkg:build": "npm run gulp:clear:dist && npm run webpack:build && gulp --gulpfile=./pkg.gulp.js pkg:prepublish"
+    "gulp:clear:dist": "gulp --gulpfile=./infra/common.gulp.js clear:dist",
+    "webpack:build": "webpack --config webpack.prod.js --progress --color",
+    "dev:build": "gulp --gulpfile=./infra/build.gulp.js build:pkg",
+    "dev:watch": "gulp --gulpfile=./infra/watch.gulp.js dev:watch",
+    "dev:test": "gulp --gulpfile=./infra/test.gulp.js test:watch",
+    "pkg:build": "npm run gulp:clear:dist && npm run webpack:build && gulp --gulpfile=./infra/pkg.gulp.js pkg:prepublish"
   },
   "keywords": [
     "krix",
