chore(app): add `--no-private` flag to `publish` script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "npm run lerna:bootstrap",
     "lerna:bootstrap": "lerna bootstrap",
     "lerna:clean": "lerna clean --yes",
-    "lerna:publish": "lerna version && npm run pkg:build && lerna publish from-package --yes --contents dist",
+    "lerna:publish": "lerna version --no-private && npm run pkg:build && lerna publish from-package --yes --contents dist",
     "gulp:tasks": "gulp --tasks",
     "dev:build": "gulp dev:linfra:build",
     "dev:watch": "npm run dev:build && lerna run --parallel dev:watch",
