feat(pkg/plugin): change JS version for production build and update ESLint

--- a/packages/plugin/tsconfig.json
+++ b/packages/plugin/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
-    "baseUrl": "src",
+    "rootDir": ".",
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": false,
@@ -24,7 +24,7 @@
   ],
   "include": [
     "src/**/*.ts",
-    "test/**/*.ts",
+    "spec/**/*.ts",
     "typings/**/*.ts",
     // etc
     
